objects/AsiaProfitCalculation__c.object
<CustomObject>
    <fields>
        <fullName>SubtotalReduction3PlusMinus__c</fullName>
        <label>Subtotal Reduction 3 Plus Minus</label>
        <picklist>
            <picklistValues>
                <fullName>+</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>-</fullName>
                <default>true</default>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SubtotalReductionAmount1__c</fullName>
        <label>Subtotal Reduction Amount 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SubtotalReductionAmount2__c</fullName>
        <label>Subtotal Reduction Amount 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SubtotalReductionName1__c</fullName>
        <label>Subtotal Reduction Name 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SubtotalReductionName2__c</fullName>
        <label>Subtotal Reduction Name 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SupervisorName__c</fullName>
        <label>Supervisor Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SupervisorPosition__c</fullName>
        <label>Supervisor Position</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TaxRate__c</fullName>
        <label>Tax Rate</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>TitleRow1__c</fullName>
        <label>Title Row 1</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TitleRow2__c</fullName>
        <label>Title Row 2</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TitleRow3__c</fullName>
        <label>Title Row 3</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TotalAmountName__c</fullName>
        <defaultValue>&quot;Total&quot;</defaultValue>
        <label>Total Amount Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TotalAmount__c</fullName>
        <label>Total Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalProfitRate__c</fullName>
        <label>Total Profit Rate</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>TotalProfitValue__c</fullName>
        <label>Total Profit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalTaxAmountName__c</fullName>
        <defaultValue>&quot;Grand Total&quot;</defaultValue>
        <label>Total Tax Amount Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TotalTaxAmount__c</fullName>
        <label>Total Tax Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>UnitBody__c</fullName>
        <label>Unit Body</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UpdateType__c</fullName>
        <description>Indicates where the modification comes from and is reset to NULL in a before upsert trigger. 
1: Modified by the webmethod between BaaN and SFDC</description>
        <label>UpdateType</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Quotation</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CreatedDateFormula__c</columns>
        <columns>ProfitCalculationNo__c</columns>
        <columns>StatusLabel__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>ja</language>
    </listViews>
    <listViews>
        <fullName>View_ApprovalCheck</fullName>
        <columns>NAME</columns>
        <columns>Approver__c</columns>
        <columns>StatusLabel__c</columns>
        <columns>IsApprovalRequestEscalated__c</columns>
        <columns>EscalateComment__c</columns>
        <columns>RejectComment__c</columns>
        <filterScope>Everything</filterScope>
        <label>承認状態チェック</label>
        <language>ja</language>
        <sharedTo>
            <group>IT_Infomation_System_G</group>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Quotation Name</label>
        <type>Text</type>
    </nameField>
    <recordTypes>
        <fullName>Others</fullName>
        <active>true</active>
        <label>Others</label>
    </recordTypes>
    <recordTypes>
        <fullName>SVC</fullName>
        <active>true</active>
        <label>SVC</label>
    </recordTypes>
    <recordTypes>
        <fullName>Unit</fullName>
        <active>true</active>
        <label>Unit</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>